test/error/dir2/main.luau
return require "./dir3/main"
